--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "postinstall": "husky install",
     "lint": "eslint src --max-warnings=0"
   },
-  "lint-staged": {
-    "*.ts(x)?": [
-      "yarn lint --fix"
-    ]
-  },
+  
+"husky": {
+  "hooks": {
+    "pre-commit": "lint-staged"
+  }
+},
+
+"lint-staged": {
+  "*.js": [
+    "eslint --fix",
+    "git add"
+  ]
+},
+
   "keywords": [
     "react-native",
     "expo",
@@ -51,12 +60,14 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-expo": "^9.5.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
+    "lint-staged": "^15.2.7",
     "typescript": "^5.1.3"
   },
   "private": true
