--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/checkbox": "^0.5.17",
     "axios": "^0.27.2",
     "expo": "^49.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.11",
+    "global": "^4.4.0",
     "moti": "^0.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,7 +46,7 @@
     "react-native-svg": "^15.4.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
