--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^0.27.2",
     "expo": "^49.0.0",
     "expo-splash-screen": "~0.20.5",
@@ -38,11 +41,14 @@
     "expo-updates": "~0.18.11",
     "global": "^4.4.0",
     "moti": "^0.19.0",
+    "navigation": "^6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.6",
