--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.10.8",
